--- a/pages/mx_huzhu/mx_huzhu.wxml
+++ b/pages/mx_huzhu/mx_huzhu.wxml
@@ -4,14 +4,13 @@
   <view class='page-header'></view>
   <view class='page-body'>
     <view class='bloc box_huzhu'>
-     <text class='bloc'>简介：选择某个梦想池后，用户可以参与购买梦想池的互助份额，当互助目标金额完成或互助时间截止，平台会公平公正的选出1名幸运者获得该梦想池的参与互助总金额去实现梦想。</text>
-      <text class='bloc font_s13'>注：如果梦想池的互助时间截止，实际参与互助的金额没有达到梦想池的目标互助金额，则幸运者得到的互助金额以实际互助总金额为准。</text>
-      <text class='bloc_guize'>小梦想互助规则详情：</text>
-      <text class='bloc'>1、多人参与——填写小梦想的用户均可以购买梦想池份额，单个梦想池1人最多购买5份；
+      <text class='bloc_guize' style='font-weight:bold'>小梦想互助规则详情</text>
+      <text class='bloc'>1、多人参与小梦想互助——填写小梦想的用户均可以购买梦想池份额，每个梦想池每人每天最多购买5份;
 </text>
-      <text class='bloc'>2、公平产生1名幸运者——每个梦想池产生1名幸运者， 根据动态福利彩票公布结果匹配幸运者，公布幸运者时间为：梦想池互助结束当日的下一个福利彩票开奖日;</text>
-     <text class='bloc'>3、幸运者得到互助资金启动梦想——公布幸运者当日起，7个工作日内上传8秒梦想执行计划小视频，审核通过后将梦想互助金额的转给幸运者；</text>
+      <text class='bloc'>2、公平产生1名幸运者——每个梦想池产生1名幸运者， 根据动态福利彩票公布结果匹配幸运者，公布幸运者时间为：梦想池互助结束后最新的一个福利彩票开奖后2小时内。 中奖编号计算公式为：((A+B)/C)取余数+10000000。</text><navigator  url="../mx_gongshi/mx_gongshi" rediect='false'><text class='list_zhankai'>查看详情</text></navigator>
+     <text class='bloc'>3、幸运者得到互助资金启动梦想——公布幸运者当日起，7个工作日内完善梦想完成实名认证，审核通过后3日内平台会将梦想互助资金转给幸运者;</text>
      <text class='bloc'>4、梦想执行跟踪报道——平台跟踪报道梦想实现进展！</text>
+     <text class='bloc font_s13'> 注：每个梦想池结束时，实际参与互助的金额没有达到梦想池的互助目标金额，则幸运者得到的互助金额以该梦想池实际完成的互助总金额为准。 每个梦想池结束标准为：互助目标金额达到或互助时间截止!</text>
     </view>
   </view>
 </view>
