--- a/pages/mx_jinxing/mx_jinxing.wxss
+++ b/pages/mx_jinxing/mx_jinxing.wxss
@@ -8,3 +8,26 @@
  .wm_menxiang{width: 40%;background: #5ecd98;border-radius:5px;opacity: 0.8;text-align: center;color: white;padding: 5px 5px 5px 5px;font-size: 30rpx} */
  page{background:#f1f4f7}
 .box_huzhu{background: white;margin: 10px;border-radius: 10px}
+
+.page-head-title{display: flex;flex-direction: row;margin-top: 10px;margin-bottom: 5px;font-size: 14px}
+.w_logo{width: 30%;align-items: center;justify-content: center;position: relative}
+.image{position: absolute;top: -4rpx}
+.w_name{position: absolute;left: 60rpx;top:5px}
+.w_desc{width: 70%;text-align: center}
+
+.wm_box{display: flex;flex-direction: column;margin: 10px;
+border-radius: 10px;margin-top: 20px;}
+.wm_header{display: flex;flex-direction: row;background: white;border-radius: 10px 10px 0px 0px}
+.wm_menxiang{width: 40%;background: #5ecd98;border-radius: 0 0 5px 5px;opacity: 0.8;text-align: center;color: white;padding: 5px 5px 5px 5px;font-size: 30rpx;margin-left:10px}
+.wm_time{width: 60%;text-align: center;font-size: 30rpx;padding: 5px 5px 5px 5px; }
+.timer{color: white;background: black;padding: 0px 5px 0px 5px;border-radius: 3px}
+.wm_body{display: flex;flex-direction: row;text-align: center;padding-top: 10px;position: relative;background: white;font-size: 12px}
+.weui-btn{color: white;background: #e9ba65;border-radius: 10px;position: absolute;bottom: 10px;}
+
+.wm_jindu{display: flex;flex-direction:column;background: white;padding:10px 0px 0px 0px;border-radius: 0 0 10px 10px}
+.m_jine{margin-left: 15px}
+.wm_progress{width: 90%;margin: 0 auto;border-radius: 10px;position: relative;}
+.baifenbi{position: absolute;left: 45%;top: 1px;color: white;font-size:14px}
+
+.page-buzhou{margin: 15px;display: flex;flex-direction: column;background: white;margin-top: 10px;border-radius: 10px;margin-bottom: 100px}
+.mat_30{margin-left: 30px;font-size: 14px}
