--- a/pages/mx_zhongjiang/mx_zhongjiang.wxss
+++ b/pages/mx_zhongjiang/mx_zhongjiang.wxss
@@ -1,5 +1,5 @@
 /* pages/mx_zhongjiang/mx_zhongjiang.wxss */
-.box_huzhu{background: white;margin: 15px;border-radius: 10px;padding-bottom: 10px}
+/*.box_huzhu{background: white;margin: 15px;border-radius: 10px;padding-bottom: 10px}
 .wm_time{text-align: center;font-size: 30rpx;padding: 5px 5px 5px 5px; }
 .timer{color: white;background: black;padding: 0px 5px 0px 5px;border-radius: 3px}
 .mx_kefu{font-size: 30rpx;text-decoration: underline;color: #5ecd98;text-align: center;padding: 5px}
@@ -10,4 +10,13 @@
 .list_zhankai{color:#5ecd98;text-decoration: underline }
 .box_list{padding: 10px 0px 10px 0px;text-align: center;overflow: hidden;text-overflow: ellipsis;border-bottom: solid thin #d1d1d1;}
 /* .list_jieshao{overflow: hidden;text-overflow: ellipsis;} */
-.box_list .col .text{overflow: hidden;text-overflow: ellipsis;}
+/*.box_list .col .text{overflow: hidden;text-overflow: ellipsis;}*/
+/* pages/xiangqingye(new)/xiangqingye(new).wxss */
+
+.box_huzhu{margin: 10px;background: white;border-radius: 10px;padding: 10px}
+.huzhu_box{text-align:center;font-size:14px;padding:7px 0px}
+.timer{color: white;background: black;padding: 0px 5px 0px 5px;border-radius: 3px}
+.menu{text-align: center}
+.box_list{margin:10px;text-align:center}
+.box_li{margin:0px 5px;color:#58d18e;border-radius:10px;background:white;padding:10px 0px}
+.list_zhankai{color:#5ecd98;text-decoration: underline }
